# SlabAllocator

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md  build.py
include/: allocator.h  arena.h  platform.h  pool.h  slab.h
src/: arena.cpp  dynamic_slab.cpp  main.cpp  pool.cpp  slab.cpp
stress_tests/: arena_stress.cpp  arena_thread_stress.cpp  pool_stress.cpp  pool_thread_stress.cpp  slab_thread_stress.cpp
tests/: test_arena.cpp  test_pool.cpp  test_slab.cpp  test_thread_safety.cpp
